parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    APPEND
    COMILLAS
    COMILLASSIMPLES
    DEF
    DIFERENTE
    DIVISIONENTERA
    DOSPUNTOS
    ELSE
    EQUALS
    EXPONENTE
    FOR
    IF
    IN
    INPUT
    IS
    LESSTHAN
    LLAVEDER
    LLAVEIZQ
    MAYORIGUAL
    MENORIGUAL
    MOD
    MORETHAN
    NOT
    NOTS
    OPEN
    OR
    PRINT
    PUNTO
    PUNTOCOMA
    RANGE
    REMOVE
    RETURN
    SUBGUION
    WHILE

Grammar

Rule 0     S' -> cuerpo
Rule 1     cuerpo -> expression
Rule 2     cuerpo -> comentario
Rule 3     cuerpo -> asignacion
Rule 4     cuerpo -> valoresComa
Rule 5     cuerpo -> lista
Rule 6     expression -> expression PLUS term
Rule 7     expression -> expression MINUS term
Rule 8     expression -> term
Rule 9     term -> term TIMES factor
Rule 10    term -> term DIVIDE factor
Rule 11    term -> factor
Rule 12    factor -> NUMBER
Rule 13    factor -> STRING
Rule 14    factor -> FLOAT
Rule 15    factor -> CADENA
Rule 16    factor -> LPAREN expression RPAREN
Rule 17    comentario -> COMMENT
Rule 18    comentario -> COMMENTS
Rule 19    asignacion -> ID ASSIGN expression
Rule 20    asignacion -> multipleAsignacion expression
Rule 21    asignacion -> ID ASSIGN BOOLEAN
Rule 22    asignacion -> ID ASSIGN lista
Rule 23    multipleAsignacion -> ID ASSIGN
Rule 24    multipleAsignacion -> ID ASSIGN multipleAsignacion
Rule 25    valoresComa -> factor
Rule 26    valoresComa -> valoresComa COMA factor
Rule 27    lista -> CORCHETEIZQ valoresComa CORCHETEDER

Terminals, with rules where they appear

AND                  : 
APPEND               : 
ASSIGN               : 19 21 22 23 24
BOOLEAN              : 21
CADENA               : 15
COMA                 : 26
COMILLAS             : 
COMILLASSIMPLES      : 
COMMENT              : 17
COMMENTS             : 18
CORCHETEDER          : 27
CORCHETEIZQ          : 27
DEF                  : 
DIFERENTE            : 
DIVIDE               : 10
DIVISIONENTERA       : 
DOSPUNTOS            : 
ELSE                 : 
EQUALS               : 
EXPONENTE            : 
FLOAT                : 14
FOR                  : 
ID                   : 19 21 22 23 24
IF                   : 
IN                   : 
INPUT                : 
IS                   : 
LESSTHAN             : 
LLAVEDER             : 
LLAVEIZQ             : 
LPAREN               : 16
MAYORIGUAL           : 
MENORIGUAL           : 
MINUS                : 7
MOD                  : 
MORETHAN             : 
NOT                  : 
NOTS                 : 
NUMBER               : 12
OPEN                 : 
OR                   : 
PLUS                 : 6
PRINT                : 
PUNTO                : 
PUNTOCOMA            : 
RANGE                : 
REMOVE               : 
RETURN               : 
RPAREN               : 16
STRING               : 13
SUBGUION             : 
TIMES                : 9
WHILE                : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 3
comentario           : 2
cuerpo               : 0
expression           : 1 6 7 16 19 20
factor               : 9 10 11 25 26
lista                : 5 22
multipleAsignacion   : 20 24
term                 : 6 7 8 9 10
valoresComa          : 4 26 27

Parsing method: LALR

state 0

    (0) S' -> . cuerpo
    (1) cuerpo -> . expression
    (2) cuerpo -> . comentario
    (3) cuerpo -> . asignacion
    (4) cuerpo -> . valoresComa
    (5) cuerpo -> . lista
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (17) comentario -> . COMMENT
    (18) comentario -> . COMMENTS
    (19) asignacion -> . ID ASSIGN expression
    (20) asignacion -> . multipleAsignacion expression
    (21) asignacion -> . ID ASSIGN BOOLEAN
    (22) asignacion -> . ID ASSIGN lista
    (25) valoresComa -> . factor
    (26) valoresComa -> . valoresComa COMA factor
    (27) lista -> . CORCHETEIZQ valoresComa CORCHETEDER
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDE factor
    (11) term -> . factor
    (23) multipleAsignacion -> . ID ASSIGN
    (24) multipleAsignacion -> . ID ASSIGN multipleAsignacion
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

    COMMENT         shift and go to state 8
    COMMENTS        shift and go to state 9
    ID              shift and go to state 10
    CORCHETEIZQ     shift and go to state 13
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

    cuerpo                         shift and go to state 1
    expression                     shift and go to state 2
    comentario                     shift and go to state 3
    asignacion                     shift and go to state 4
    valoresComa                    shift and go to state 5
    lista                          shift and go to state 6
    term                           shift and go to state 7
    multipleAsignacion             shift and go to state 11
    factor                         shift and go to state 12

state 1

    (0) S' -> cuerpo .



state 2

    (1) cuerpo -> expression .
    (6) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term

    $end            reduce using rule 1 (cuerpo -> expression .)
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20


state 3

    (2) cuerpo -> comentario .

    $end            reduce using rule 2 (cuerpo -> comentario .)


state 4

    (3) cuerpo -> asignacion .

    $end            reduce using rule 3 (cuerpo -> asignacion .)


state 5

    (4) cuerpo -> valoresComa .
    (26) valoresComa -> valoresComa . COMA factor

    $end            reduce using rule 4 (cuerpo -> valoresComa .)
    COMA            shift and go to state 21


state 6

    (5) cuerpo -> lista .

    $end            reduce using rule 5 (cuerpo -> lista .)


state 7

    (8) expression -> term .
    (9) term -> term . TIMES factor
    (10) term -> term . DIVIDE factor

    PLUS            reduce using rule 8 (expression -> term .)
    MINUS           reduce using rule 8 (expression -> term .)
    $end            reduce using rule 8 (expression -> term .)
    RPAREN          reduce using rule 8 (expression -> term .)
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 23


state 8

    (17) comentario -> COMMENT .

    $end            reduce using rule 17 (comentario -> COMMENT .)


state 9

    (18) comentario -> COMMENTS .

    $end            reduce using rule 18 (comentario -> COMMENTS .)


state 10

    (19) asignacion -> ID . ASSIGN expression
    (21) asignacion -> ID . ASSIGN BOOLEAN
    (22) asignacion -> ID . ASSIGN lista
    (23) multipleAsignacion -> ID . ASSIGN
    (24) multipleAsignacion -> ID . ASSIGN multipleAsignacion

    ASSIGN          shift and go to state 24


state 11

    (20) asignacion -> multipleAsignacion . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDE factor
    (11) term -> . factor
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

    expression                     shift and go to state 25
    term                           shift and go to state 7
    factor                         shift and go to state 26

state 12

    (25) valoresComa -> factor .
    (11) term -> factor .

  ! reduce/reduce conflict for $end resolved using rule 11 (term -> factor .)
    COMA            reduce using rule 25 (valoresComa -> factor .)
    TIMES           reduce using rule 11 (term -> factor .)
    DIVIDE          reduce using rule 11 (term -> factor .)
    PLUS            reduce using rule 11 (term -> factor .)
    MINUS           reduce using rule 11 (term -> factor .)
    $end            reduce using rule 11 (term -> factor .)

  ! $end            [ reduce using rule 25 (valoresComa -> factor .) ]


state 13

    (27) lista -> CORCHETEIZQ . valoresComa CORCHETEDER
    (25) valoresComa -> . factor
    (26) valoresComa -> . valoresComa COMA factor
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

    valoresComa                    shift and go to state 27
    factor                         shift and go to state 28

state 14

    (12) factor -> NUMBER .

    COMA            reduce using rule 12 (factor -> NUMBER .)
    $end            reduce using rule 12 (factor -> NUMBER .)
    TIMES           reduce using rule 12 (factor -> NUMBER .)
    DIVIDE          reduce using rule 12 (factor -> NUMBER .)
    PLUS            reduce using rule 12 (factor -> NUMBER .)
    MINUS           reduce using rule 12 (factor -> NUMBER .)
    CORCHETEDER     reduce using rule 12 (factor -> NUMBER .)
    RPAREN          reduce using rule 12 (factor -> NUMBER .)


state 15

    (13) factor -> STRING .

    COMA            reduce using rule 13 (factor -> STRING .)
    $end            reduce using rule 13 (factor -> STRING .)
    TIMES           reduce using rule 13 (factor -> STRING .)
    DIVIDE          reduce using rule 13 (factor -> STRING .)
    PLUS            reduce using rule 13 (factor -> STRING .)
    MINUS           reduce using rule 13 (factor -> STRING .)
    CORCHETEDER     reduce using rule 13 (factor -> STRING .)
    RPAREN          reduce using rule 13 (factor -> STRING .)


state 16

    (14) factor -> FLOAT .

    COMA            reduce using rule 14 (factor -> FLOAT .)
    $end            reduce using rule 14 (factor -> FLOAT .)
    TIMES           reduce using rule 14 (factor -> FLOAT .)
    DIVIDE          reduce using rule 14 (factor -> FLOAT .)
    PLUS            reduce using rule 14 (factor -> FLOAT .)
    MINUS           reduce using rule 14 (factor -> FLOAT .)
    CORCHETEDER     reduce using rule 14 (factor -> FLOAT .)
    RPAREN          reduce using rule 14 (factor -> FLOAT .)


state 17

    (15) factor -> CADENA .

    COMA            reduce using rule 15 (factor -> CADENA .)
    $end            reduce using rule 15 (factor -> CADENA .)
    TIMES           reduce using rule 15 (factor -> CADENA .)
    DIVIDE          reduce using rule 15 (factor -> CADENA .)
    PLUS            reduce using rule 15 (factor -> CADENA .)
    MINUS           reduce using rule 15 (factor -> CADENA .)
    CORCHETEDER     reduce using rule 15 (factor -> CADENA .)
    RPAREN          reduce using rule 15 (factor -> CADENA .)


state 18

    (16) factor -> LPAREN . expression RPAREN
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDE factor
    (11) term -> . factor
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

    expression                     shift and go to state 29
    term                           shift and go to state 7
    factor                         shift and go to state 26

state 19

    (6) expression -> expression PLUS . term
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDE factor
    (11) term -> . factor
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

    term                           shift and go to state 30
    factor                         shift and go to state 26

state 20

    (7) expression -> expression MINUS . term
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDE factor
    (11) term -> . factor
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

    term                           shift and go to state 31
    factor                         shift and go to state 26

state 21

    (26) valoresComa -> valoresComa COMA . factor
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

    factor                         shift and go to state 32

state 22

    (9) term -> term TIMES . factor
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

    factor                         shift and go to state 33

state 23

    (10) term -> term DIVIDE . factor
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

    factor                         shift and go to state 34

state 24

    (19) asignacion -> ID ASSIGN . expression
    (21) asignacion -> ID ASSIGN . BOOLEAN
    (22) asignacion -> ID ASSIGN . lista
    (23) multipleAsignacion -> ID ASSIGN .
    (24) multipleAsignacion -> ID ASSIGN . multipleAsignacion
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term
    (27) lista -> . CORCHETEIZQ valoresComa CORCHETEDER
    (23) multipleAsignacion -> . ID ASSIGN
    (24) multipleAsignacion -> . ID ASSIGN multipleAsignacion
    (9) term -> . term TIMES factor
    (10) term -> . term DIVIDE factor
    (11) term -> . factor
    (12) factor -> . NUMBER
    (13) factor -> . STRING
    (14) factor -> . FLOAT
    (15) factor -> . CADENA
    (16) factor -> . LPAREN expression RPAREN

  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CADENA resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    BOOLEAN         shift and go to state 37
    CORCHETEIZQ     shift and go to state 13
    ID              shift and go to state 35
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    CADENA          shift and go to state 17
    LPAREN          shift and go to state 18

  ! NUMBER          [ reduce using rule 23 (multipleAsignacion -> ID ASSIGN .) ]
  ! STRING          [ reduce using rule 23 (multipleAsignacion -> ID ASSIGN .) ]
  ! FLOAT           [ reduce using rule 23 (multipleAsignacion -> ID ASSIGN .) ]
  ! CADENA          [ reduce using rule 23 (multipleAsignacion -> ID ASSIGN .) ]
  ! LPAREN          [ reduce using rule 23 (multipleAsignacion -> ID ASSIGN .) ]

    expression                     shift and go to state 36
    lista                          shift and go to state 38
    multipleAsignacion             shift and go to state 39
    term                           shift and go to state 7
    factor                         shift and go to state 26

state 25

    (20) asignacion -> multipleAsignacion expression .
    (6) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term

    $end            reduce using rule 20 (asignacion -> multipleAsignacion expression .)
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20


state 26

    (11) term -> factor .

    TIMES           reduce using rule 11 (term -> factor .)
    DIVIDE          reduce using rule 11 (term -> factor .)
    PLUS            reduce using rule 11 (term -> factor .)
    MINUS           reduce using rule 11 (term -> factor .)
    $end            reduce using rule 11 (term -> factor .)
    RPAREN          reduce using rule 11 (term -> factor .)


state 27

    (27) lista -> CORCHETEIZQ valoresComa . CORCHETEDER
    (26) valoresComa -> valoresComa . COMA factor

    CORCHETEDER     shift and go to state 40
    COMA            shift and go to state 21


state 28

    (25) valoresComa -> factor .

    CORCHETEDER     reduce using rule 25 (valoresComa -> factor .)
    COMA            reduce using rule 25 (valoresComa -> factor .)


state 29

    (16) factor -> LPAREN expression . RPAREN
    (6) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term

    RPAREN          shift and go to state 41
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20


state 30

    (6) expression -> expression PLUS term .
    (9) term -> term . TIMES factor
    (10) term -> term . DIVIDE factor

    PLUS            reduce using rule 6 (expression -> expression PLUS term .)
    MINUS           reduce using rule 6 (expression -> expression PLUS term .)
    $end            reduce using rule 6 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 6 (expression -> expression PLUS term .)
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 23


state 31

    (7) expression -> expression MINUS term .
    (9) term -> term . TIMES factor
    (10) term -> term . DIVIDE factor

    PLUS            reduce using rule 7 (expression -> expression MINUS term .)
    MINUS           reduce using rule 7 (expression -> expression MINUS term .)
    $end            reduce using rule 7 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 7 (expression -> expression MINUS term .)
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 23


state 32

    (26) valoresComa -> valoresComa COMA factor .

    COMA            reduce using rule 26 (valoresComa -> valoresComa COMA factor .)
    $end            reduce using rule 26 (valoresComa -> valoresComa COMA factor .)
    CORCHETEDER     reduce using rule 26 (valoresComa -> valoresComa COMA factor .)


state 33

    (9) term -> term TIMES factor .

    TIMES           reduce using rule 9 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 9 (term -> term TIMES factor .)
    PLUS            reduce using rule 9 (term -> term TIMES factor .)
    MINUS           reduce using rule 9 (term -> term TIMES factor .)
    $end            reduce using rule 9 (term -> term TIMES factor .)
    RPAREN          reduce using rule 9 (term -> term TIMES factor .)


state 34

    (10) term -> term DIVIDE factor .

    TIMES           reduce using rule 10 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 10 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 10 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 10 (term -> term DIVIDE factor .)
    $end            reduce using rule 10 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 10 (term -> term DIVIDE factor .)


state 35

    (23) multipleAsignacion -> ID . ASSIGN
    (24) multipleAsignacion -> ID . ASSIGN multipleAsignacion

    ASSIGN          shift and go to state 42


state 36

    (19) asignacion -> ID ASSIGN expression .
    (6) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term

    $end            reduce using rule 19 (asignacion -> ID ASSIGN expression .)
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20


state 37

    (21) asignacion -> ID ASSIGN BOOLEAN .

    $end            reduce using rule 21 (asignacion -> ID ASSIGN BOOLEAN .)


state 38

    (22) asignacion -> ID ASSIGN lista .

    $end            reduce using rule 22 (asignacion -> ID ASSIGN lista .)


state 39

    (24) multipleAsignacion -> ID ASSIGN multipleAsignacion .

    NUMBER          reduce using rule 24 (multipleAsignacion -> ID ASSIGN multipleAsignacion .)
    STRING          reduce using rule 24 (multipleAsignacion -> ID ASSIGN multipleAsignacion .)
    FLOAT           reduce using rule 24 (multipleAsignacion -> ID ASSIGN multipleAsignacion .)
    CADENA          reduce using rule 24 (multipleAsignacion -> ID ASSIGN multipleAsignacion .)
    LPAREN          reduce using rule 24 (multipleAsignacion -> ID ASSIGN multipleAsignacion .)


state 40

    (27) lista -> CORCHETEIZQ valoresComa CORCHETEDER .

    $end            reduce using rule 27 (lista -> CORCHETEIZQ valoresComa CORCHETEDER .)


state 41

    (16) factor -> LPAREN expression RPAREN .

    COMA            reduce using rule 16 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 16 (factor -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 16 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 16 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 16 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 16 (factor -> LPAREN expression RPAREN .)
    CORCHETEDER     reduce using rule 16 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 16 (factor -> LPAREN expression RPAREN .)


state 42

    (23) multipleAsignacion -> ID ASSIGN .
    (24) multipleAsignacion -> ID ASSIGN . multipleAsignacion
    (23) multipleAsignacion -> . ID ASSIGN
    (24) multipleAsignacion -> . ID ASSIGN multipleAsignacion

    NUMBER          reduce using rule 23 (multipleAsignacion -> ID ASSIGN .)
    STRING          reduce using rule 23 (multipleAsignacion -> ID ASSIGN .)
    FLOAT           reduce using rule 23 (multipleAsignacion -> ID ASSIGN .)
    CADENA          reduce using rule 23 (multipleAsignacion -> ID ASSIGN .)
    LPAREN          reduce using rule 23 (multipleAsignacion -> ID ASSIGN .)
    ID              shift and go to state 35

    multipleAsignacion             shift and go to state 39
WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for NUMBER in state 24 resolved as shift
WARNING: shift/reduce conflict for STRING in state 24 resolved as shift
WARNING: shift/reduce conflict for FLOAT in state 24 resolved as shift
WARNING: shift/reduce conflict for CADENA in state 24 resolved as shift
WARNING: shift/reduce conflict for LPAREN in state 24 resolved as shift
WARNING: reduce/reduce conflict in state 12 resolved using rule (term -> factor)
WARNING: rejected rule (valoresComa -> factor) in state 12
